--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  div
+    if user 
+      a(href="/logout") Logout from #{user.username}
+    else 
+      a(href="/login") Login
+
