--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -26,3 +26,16 @@ block content
               ).availability-toggle-button #{availabilityLabels[availability]}
             else
               p #{availabilityLabels[availability]}
+    tr
+      th Comment 
+      each user in users 
+        if user.isSelf
+          td 
+            p#self-comment #{commentMap.get(user.userId)}
+            button(
+              data-schedule-id=schedule.scheduleId
+              data-user-id=user.userId
+            )#self-comment-button Edit
+        else 
+          td 
+            p #{commentMap.get(user.userId)}
