add feature for editing schedule and test

--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -4,6 +4,10 @@ block content
   h4 #{schedule.scheduleName}
   p(style="white-space:pre;") #{schedule.memo}
   p Created by: #{schedule.user.username}
+  - var isMine = parseInt(user.id) === schedule.user.userId
+  if isMine
+    div
+      a(href=`/schedules/${schedule.scheduleId}/edit`) Edit This Schedule
   h3 Availabilities
   table
     tr
