--- a/views/edit.pug
+++ b/views/edit.pug
@@ -18,3 +18,6 @@ block content
       textarea(name="candidates")
     div 
       button(type="submit") Edit Schedule
+  h3 Dangerous Change 
+  form(method="post", action=`/schedules/${schedule.scheduleId}?delete=1`)
+    button(type="submit") Delete Schedule
