--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -1,15 +1,19 @@
 extends layout
 
 block content
-  h4 #{schedule.scheduleName}
-  p(style="white-space:pre;") #{schedule.memo}
-  p Created by: #{schedule.user.username}
+  div.card.my-3
+    div.card-header
+      h4 #{schedule.scheduleName}
+    div.card-body
+      p(style="white-space:pre;") #{schedule.memo}
+    div.card-footer
+      p Created by: #{schedule.user.username}
   - var isMine = parseInt(user.id) === schedule.user.userId
   if isMine
     div
-      a(href=`/schedules/${schedule.scheduleId}/edit`) Edit This Schedule
-  h3 Availabilities
-  table
+      a(href=`/schedules/${schedule.scheduleId}/edit`).btn.btn-info Edit This Schedule
+  h3.my-3 Availabilities
+  table.table.table-bordered
     tr
       th Schedule
       each user in users
@@ -20,26 +24,29 @@ block content
         each user in users
           - var availability = availabilityMapMap.get(user.userId).get(candidate.candidateId);
           - var availabilityLabels = [ 'Absent', '?', 'Present'];
+          - var buttonStyles = ['btn-danger', 'btn-secondary', 'btn-success'];
           td 
             if user.isSelf
-              button(
+              button(class=`availability-toggle-button btn-lg ${buttonStyles[availability]}`
                 data-schedule-id=schedule.scheduleId
                 data-user-id=user.userId
                 data-candidate-id=candidate.candidateId
                 data-availability=availability
-              ).availability-toggle-button #{availabilityLabels[availability]}
+              ) #{availabilityLabels[availability]}
             else
-              p #{availabilityLabels[availability]}
+              h3 #{availabilityLabels[availability]}
     tr
       th Comment 
       each user in users 
         if user.isSelf
           td 
-            p#self-comment #{commentMap.get(user.userId)}
+            p
+              small#self-comment #{commentMap.get(user.userId)}
             button(
               data-schedule-id=schedule.scheduleId
               data-user-id=user.userId
-            )#self-comment-button Edit
+            )#self-comment-button.btn.btn-info Edit
         else 
           td 
-            p #{commentMap.get(user.userId)}
+            p 
+              small #{commentMap.get(user.userId)}
